[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optillm"
version = "0.3.3"
description = "An optimizing inference proxy for LLMs."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "codelion", email = "codelion@okyasoft.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "networkx",
    "openai",
    "z3-solver",
    "aiohttp",
    "flask",
    "torch",
    "transformers",
    "azure-identity",
    "tiktoken",
    "scikit-learn",
    "litellm",
    "requests",
    "beautifulsoup4",
    "lxml",
    "presidio_analyzer",
    "presidio_anonymizer",
    "nbconvert",
    "nbformat",
    "ipython",
    "ipykernel",
    "peft",
    "bitsandbytes",
    "gradio<5.16.0",
    # Constrain spacy version to avoid blis build issues on ARM64
    "spacy<3.8.0",
    "cerebras_cloud_sdk",
    "outlines[transformers]",
    "sentencepiece",
    "mcp",
    "adaptive-classifier",
    "datasets",
    "PyYAML",
    "selenium",
    "webdriver-manager",
    # MLX support for Apple Silicon optimization
    'mlx-lm>=0.24.0; platform_machine=="arm64" and sys_platform=="darwin"',
]

[project.optional-dependencies]
eval = [
    "tabulate",
    "accelerate",
    "huggingface_hub",
    "httpx",
    "tqdm",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/codelion/optillm"
Repository = "https://github.com/codelion/optillm"
Issues = "https://github.com/codelion/optillm/issues"

[project.scripts]
optillm = "optillm:main"

[tool.setuptools.packages.find]
include = ["optillm*"]

[tool.setuptools.package-data]
optillm = [
    "plugins/*.py",
    "plugins/proxy/*.py",
    "plugins/proxy/*.yaml",
    "plugins/proxy/*.md",
    "cepo/*.py",
    "cepo/configs/*.yaml",
]